plugins {
    id 'org.ajoberstar.grgit' version '4.0.2' apply false
    id 'org.springframework.boot' version "${springBootVersion}" apply false
    id "io.spring.dependency-management" version "1.1.0" apply false
    id "com.baidu.jprotobuf" version "1.2.1" apply false
    id "com.gradle.plugin-publish" version "0.16.0" apply false
}

apply from: "${rootDir}/gradle/dependency.gradle"
apply from: "${rootDir}/gradle/git.gradle"

ext {
    moduleProjects = subprojects.findAll { it.name.startsWith("tny-game-") }
    javaProjects = moduleProjects - project(":tny-game-bom")
    javaProjects = javaProjects.findAll { !it.name.endsWith("-gradle") }
    gradleProjects = moduleProjects.findAll { it.name.endsWith("-gradle") }
}

configure(subprojects) {

    apply plugin: "idea"
    apply plugin: 'maven-publish'

    apply plugin: "io.spring.dependency-management"

    dependencyManagement {

        imports {
            mavenBom("org.apache.logging.log4j:log4j-bom:${log4j2Version}")
            mavenBom("com.alibaba.cloud:spring-cloud-alibaba-dependencies:${alibabaCloudVersion}")
            mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
            mavenBom("com.google.protobuf:protobuf-bom:${protobufVersion}")
            mavenBom("io.netty:netty-bom:${nettyVersion}")
            mavenBom("org.slf4j:slf4j-parent:${slf4jVersion}")
            mavenBom("com.fasterxml.jackson:jackson-bom:${jacksonVersion}")
        }

        dependencies {
            dependency "${libs.redisson}:${vers.redisson}"
            dependency "${libs.commons_io}:2.8.0"
            dependency "${libs.commons_codec}:1.15"
            dependency "${libs.commons_beanutils}:1.9.4"
            dependency "${libs.commons_collections}:3.2.2"
            dependency "${libs.commons_collections4}:4.4"
            dependency "${libs.commons_configuration}:1.10"
            dependency "${libs.commons_lang}:2.6"
            dependency "${libs.commons_lang3}:3.12.0"
            dependency "${libs.commons_math3}:3.6.1"
            dependency "${libs.commons_compress}:1.22"
            dependency "${libs.commons_pool2}:2.9.0"
            dependency "${libs.commons_pool}:1.6"
            dependency "${libs.commons_crypto}:1.1.0"
            dependency "${libs.commons_dbcp2}:2.8.0"
            dependency "${libs.checkerframework}"
            dependency "${libs.errorprone}"
            dependency "${libs.guava}:31.1-jre"
            dependency "${libs.javassist}:3.30.2-GA"
            dependency "${libs.xstream}:1.4.20"
        }
        generatedPomCustomization {
            enabled = false
        }
    }
    group 'com.tny.game'
    version "${projectVersion}"

    repositories {
        mavenLocal()
        maven { url "https://mirrors.cloud.tencent.com/nexus/repository/maven-public/" }
        maven { url "https://m2.tnydev.com/repository/maven-public/" }
        maven { url "https://maven.aliyun.com/repository/public" }
    }

}


configure(gradleProjects) {
    apply plugin: 'groovy'
    apply plugin: 'java-gradle-plugin'
    apply from: "${rootDir}/gradle/publish.gradle"

    configurations {
        all {
            resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
            resolutionStrategy.cacheDynamicVersionsFor 0, 'seconds'
        }
    }

    [compileJava, compileGroovy, javadoc]*.options*.encoding = "${encoding}"

    dependencies {
        api gradleApi()
        api localGroovy()
    }

    task sourcesJar(type: Jar, dependsOn: classes) {
        duplicatesStrategy = DuplicatesStrategy.INCLUDE
        archiveClassifier.set("sources")
        from sourceSets.main.allSource
    }

    task createProject {
        doLast {
            sourceSets*.groovy.srcDirs*.each { it.mkdirs() }
            sourceSets*.resources.srcDirs*.each { it.mkdirs() }
        }
    }
}

configure(javaProjects) {

    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'
    apply from: "${rootDir}/gradle/publications.gradle"
    apply from: "${rootDir}/gradle/tny-module.gradle"

//    ext.springBoot = name.endsWith("-demo") || name.endsWith("-suite") || name.contains("-starter-")

    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17

    task createProject {
        doLast {
            sourceSets*.java.srcDirs*.each { it.mkdirs() }
            sourceSets*.resources.srcDirs*.each { it.mkdirs() }
        }
    }

    configurations {
        all {
            resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
            resolutionStrategy.cacheDynamicVersionsFor 0, 'seconds'
            exclude module: 'spring-boot-starter-logging'//排除对默认logging的依赖
            exclude module: 'log4j-to-slf4j'//排除对默认logging的依赖
        }
    }

    compileJava.dependsOn(processResources)
    [compileJava, compileTestJava, javadoc]*.options*.encoding = "${encoding}"

    compileJava {
        options.compilerArgs << '-parameters'
        options.fork = true
        options.encoding = "UTF-8"
    }

    jar {
        duplicatesStrategy = DuplicatesStrategy.INCLUDE
        exclude("**.sql", "**.xml", "**.properties")
    }

    test {
        useJUnitPlatform()
    }

    task sourcesJar(type: Jar, dependsOn: classes) {
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
        archiveClassifier.set("sources")
        from sourceSets.main.allSource
    }

    java {
        withSourcesJar()
    }

    dependencies {


        implementation libs.slf4j_api
        implementation libs.commons_lang3

        testImplementation libs.mockito_junit_jupiter
        testImplementation libs.junit_jupiter
        testImplementation libs.jmock_junit5
        testImplementation libs.spring_test
        testImplementation libs.slf4j_simple
        testImplementation project(":tny-game-tester")

    }


    idea {
        module {
            inheritOutputDirs = false
            outputDir = compileJava.destinationDir
            testOutputDir = compileTestJava.destinationDir
            downloadJavadoc = false
            downloadSources = false
        }
    }

}